--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,16 @@
 </head>
 <body>
 
+<h1>Colleen and Spencer's Europe Adventure</h1>
+
+<p>Unsatisfied with mainstream image sharing options, I made my own.</p>
 <%= yield %>
+
+<footer>
+  <p>
+    If you would like to donate some much-needed CSS, <a href="https://github.com/cmurphy/photo_album">check out the source</a>.
+  </p>
+</footer>
 
 </body>
 </html>
